force-app/main/default/objects/Action_custom__c/Action_custom__c.object-meta.xml
<CustomObject>
    <label>Action custom</label>
    <nameField>
        <displayFormat>ACT{0000}</displayFormat>
        <label>Numéro de l&apos;action</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions custom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>