force-app/main/default/objects/Action_custom__c/fields/Categorie_d_action_realisee__c.field-meta.xml
<CustomField>
    <fullName>Categorie_d_action_realisee__c</fullName>
    <label>Catégorie d&apos;action réalisée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Changement</fullName>
            </value>
            <value>
                <fullName>Ajout</fullName>
            </value>
            <value>
                <fullName>Suppression</fullName>
            </value>
            <value>
                <fullName>Rebranchement</fullName>
            </value>
            <value>
                <fullName>Paramétrage</fullName>
            </value>
            <value>
                <fullName>Contrôle</fullName>
            </value>
            <value>
                <fullName>Foyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>