force-app/main/default/objects/Action_custom__c/fields/Equipement__c.field-meta.xml
<CustomField>
    <fullName>Equipement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Équipement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Foyer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>