force-app/main/default/objects/Action_custom__c/fields/Intervention__c.field-meta.xml
<CustomField>
    <fullName>Intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intervention</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>