force-app/main/default/objects/Action_custom__c/fields/Rendez_vous_de_service__c.field-meta.xml
<CustomField>
    <fullName>Rendez_vous_de_service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rendez-vous de service</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>