force-app/main/default/objects/Action_custom__c/fields/Type_d_action_demandee__c.field-meta.xml
<CustomField>
    <fullName>Type_d_action_demandee__c</fullName>
    <label>Type d&apos;action demandée</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ajout poste</fullName>
            </value>
            <value>
                <fullName>Audimètre ne s&apos;allume plus</fullName>
            </value>
            <value>
                <fullName>Pb Audience</fullName>
            </value>
            <value>
                <fullName>Pb Connexion</fullName>
            </value>
            <value>
                <fullName>Pb Sonde Tv (Déclaration)</fullName>
            </value>
            <value>
                <fullName>Changement TV</fullName>
            </value>
            <value>
                <fullName>Pas de connexion Wifi</fullName>
            </value>
            <value>
                <fullName>Paramétrage Meters</fullName>
            </value>
            <value>
                <fullName>Installation Meters</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Desinstallation Poste</fullName>
            </value>
            <value>
                <fullName>Désinstallation</fullName>
            </value>
            <value>
                <fullName>Changement Audimètre</fullName>
            </value>
            <value>
                <fullName>Chute</fullName>
            </value>
            <value>
                <fullName>Routeur ne s&apos;allume plus</fullName>
            </value>
            <value>
                <fullName>Reinstallation</fullName>
            </value>
            <value>
                <fullName>Contrôle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>