force-app/main/default/objects/Action_custom__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Foyer__c</columns>
    <columns>NAME</columns>
    <columns>Equipement__c</columns>
    <columns>Intervention__c</columns>
    <columns>Type_d_action_demandee__c</columns>
    <columns>Rendez_vous_de_service__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les actions</label>
</ListView>